# Python---Starlette-and-Strawberry-GraphQL

./: .gitignore  README.md  app.py  database.db  pyproject.toml  requirements.txt
models/: models.py
schema/: schema.py
