[tool.poetry]
name = "python-starlette-stawberry-example"
version = "0.1.0"
description = ""
authors = ["Fábio Vitor <fabvitor2010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {version = "^1.4.26", extras = ["asyncio"]}
strawberry-graphql = "^0.85.1"
starlette = "^0.16.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
aiosqlite = "^0.17.0"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.0"
bandit = "^1.7.0"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 99

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin,sqlalchemy.ext.mypy.plugin"
implicit_reexport = false
